--- a/Homepage/home.css
+++ b/Homepage/home.css
@@ -3,7 +3,6 @@ body{
     flex-direction: column;
     overflow-x: hidden;
     pointer-events: all;
-    overflow-y: hidden;
 }
 #nav{
     background-color: whitesmoke;
@@ -245,13 +244,13 @@ h5{
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 630px;
+    height: 1365px;
     background-color: gray;
     opacity: 0;
     pointer-events: none;
 }
 .box{
-    position: absolute;
+    position: fixed;
     top: 150px;
     left: 450px;
     width: 400px;
@@ -365,4 +364,13 @@ input{
 }
 .red{
     border: 1px solid red !important;
+}
+button{
+    text-decoration: none;
+    background-color: rgb(16, 95, 127);
+    border-style: none;
+    font-size: 15px;
+    color: white;
+    font-family: 'Poppins';
+    cursor: pointer;
 }
