--- a/Planifier un examen/index.css
+++ b/Planifier un examen/index.css
@@ -1,113 +1,148 @@
-*{
-    font-family: 'Poppins', sans-serif;
-}
 body{
-    display: grid;
-    grid-template-columns: 20% 80%;
-    background-color: #CCCCCC;
-    overflow-y: hidden;
-}
-.leftbare{
+    display: flex;
+    flex-direction: row;
+    font-family: 'Poppins';
     height: 100vh;
-    background-color: aliceblue;
-    position: relative;
-    top: -8px;
-    left: -8px;
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: whitesmoke;
 }
-.logo{
+.container{
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    margin-top: -0.5em;
+    margin-left: -0.5em;
+}
+.navbare{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    background-color: #1D6F42;
+}
+.navbare .buttons{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.navbare .buttons h3{
+    color: #a8a9ad;
+    margin-left: 1em;
+    margin-bottom: -0.1em;
+}
+.navbare .buttons .button{
+    display: flex;
+    flex-direction: column;
+    color: whitesmoke;
+    font-size: 15px;
+    margin-top: 1em;
+    border-radius: 20px;
+    margin-left: 1.2em;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    padding-left: 0.5em;
+}
+.navbare .buttons .button .scrollnav{
+    overflow-y: scroll;
+    height: 80%;
+    width: 90%;
+}
+.navbare .buttons .button .scrollnav .Npalier .headerB{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: whitesmoke;
+    color: #1D6F42;
+    font-weight: 600;
+    border-radius: 25px;
+    height: 5vh;
+    padding-left: 0.5em;
+}
+.Npalier{
+    margin-top: 1em;
+}
+.navbare .buttons .button .scrollnav .Npalier .specialites{
+    flex-direction: column;
+    margin-left: 1.5em;
+    margin-top: 0.2em;
+    display: none;   
+}
+.navbare .buttons .button .scrollnav .Npalier .specialites .Nspeacialite{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+.navbare .buttons .button .scrollnav .Npalier .specialites .Nspeacialite .Hspecialite{
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+} 
+.navbare .buttons .button .scrollnav .Npalier .specialites .Nspeacialite .Palier{
+    display: none;
+    flex-direction: column;
+    margin-left: 0.2em;
 }
-.logo h1{
-    font-size: 18px;
-    margin-left: -3px;
-    margin-top: 15px;
-}
-.logo ion-icon{
-    margin-left: 10px;
-    font-size: 30px;
-    color: #377DFF;
-    border-radius: 20px;
-    padding: 5px;
-}
-.menu h2{
-    font-size: 15px;
-    position: relative;
-    left: 40px;
-}
-.menu .button{
+.navbare .buttons .button .scrollnav .Npalier .specialites .Nspeacialite .Palier .NPalier{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    margin-left: 20px;
-    background-color: aliceblue;
-    margin-top: 0px;
-    margin-right: 10px;
-    border-radius: 10px;
-    height: 40px;
-    color: #8F8F8F;
+    margin-top: -1em;
 }
-.menu .button.up{
-    margin-top: -10px;
+.navbare .buttons .button .scrollnav .Npalier .specialites .Nspeacialite .Palier .NPalier ion-icon{
+    font-size: 12px;
 }
-.button h3{
-    font-size: 15px;
-    margin-left: 10px;
-    font-weight: 400;
+.navbare .buttons .button .scrollnav .Npalier .specialites .Nspeacialite p{
+    font-size: 13px;
 }
-.button ion-icon{
+.navbare .buttons .button ion-icon{
+    margin-right: 0.4em;
     font-size: 18px;
-    margin-left: 8px;
-    padding-left: 10px;
 }
-.menu .button:hover{
-    background-color: #377DFF;
-    cursor: pointer;
-    color: aliceblue;
-    font-weight: 500;
+.navbare .buttons .button p{
+    font-size: 15px;
+}
+.navbare .top{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.navbare .top h1{
+    font-size: 18px;
+    color: whitesmoke;
+}
+.navbare .top ion-icon{
+    font-size: 22px;
+    margin-right: 0.2em;
+    color: whitesmoke;
 }
 .menu{
-    margin-top: 20px;
-}
-.profile .image{
-    font-size: 20px;
-    background-color: aliceblue;
-    width: 30px;
-    height: 30px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    position: absolute;
-    left: 1333px;
-    top: 5px;
-    border: 1px solid black;
-    z-index: 1;
-    cursor: pointer;
+    flex-direction: column;
+    width: 80%;
+    background-color: whitesmoke;
 }
-.profile .profilepage{
-    width: 180px;
-    height: 145px;
-    background-color: aliceblue;
+::-webkit-scrollbar{
+    width: 0.8em;
+}
+::-webkit-scrollbar-track{
     border-radius: 20px;
-    position: absolute;
-    left: 1185px;
-    top: 3px;
-    z-index: 0;
-    opacity: 0;
+    background-color: hsl(140 42% 42% / 0.5);
+
 }
-.logout{
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    margin-top: -5px;
-    margin-right: 10px;
+::-webkit-scrollbar-thumb{
+    background: whitesmoke;
+    border-radius: 20vw;
+    cursor: default;
 }
-.personalinfo{
-    font-size: 13px;
-    margin-top: 30px;
-    margin-left: 10px;
-}
-.opacity1{
-    opacity: 1 !important;
+
+.show{
+    display: flex !important;
 }
