--- a/Planifier un examen/actionPlan.css
+++ b/Planifier un examen/actionPlan.css
@@ -44,6 +44,10 @@ body{
     height: 7vh;
     width: 80%;
     padding-left: 0.5em;
+}.navbare .buttons .actions .action.one{
+    background-color: whitesmoke;
+    color: #1D6F42;
+    font-weight: 600;
 }
 .navbare .buttons .actions .action:hover,.navbare .buttons .logout .action:hover{
     background-color: whitesmoke;
@@ -79,10 +83,70 @@ body{
     display: flex;
     flex-direction: column;
     width: 80%;
+    height: 100%;
     background-color: whitesmoke;
+    justify-content: center;
+    align-items: center;
 }
-.show{
-    display: flex !important;
+.menu .box{
+    width: 70%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #1D6F42;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 15px;
+}
+.menu .box .button{
+    display: flex;
+    width: 40%;
+}
+.menu .box .button button{
+    background-color: #1D6F42;
+    outline: none;
+    border: 2px solid #1D6F42;
+    color: whitesmoke;
+    margin-top: 1em;
+    width: 100%;
+    height: 5vh;
+    border-radius: 10px;
+    font-size: 15px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.menu .box .insidebox{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.menu .box .insidebox p{
+    color: #1D6F42;
+    font-weight: 600;
+}
+.menu .box .insidebox .form{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.menu .box .insidebox select{
+    margin-top: -0.5em;
+    border: 2px solid #1D6F42;
+    outline: none;
+    border-radius: 10px;
+    height: 4vh;
+    text-align: center;
+    width: 40%;
+    font-family: 'Poppins';
+    font-weight: 600;
+}
+.menu .box .insidebox select option{
+    font-weight: 600;
+    background-color: hsl(140 42% 42% / 0.5);
+    cursor: pointer;
 }
 a{
     text-decoration: none;
