--- a/Planifier un examen/index.css
+++ b/Planifier un examen/index.css
@@ -81,6 +81,73 @@ body{
     width: 80%;
     background-color: whitesmoke;
 }
+.menu .boxes{
+    display: flex;
+    height: 20%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.menu .boxes .idbox{
+    height: 80%;
+    width: 25%;
+    border:2px solid #1D6F42;
+    border-radius: 10px;
+    margin: 1em;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+}
+.menu .boxes .idbox .boxicon{
+    width: 40%;
+    display: flex;
+}
+.menu .boxes .idbox .boxicon ion-icon{
+    font-size: 50px;
+    color: #163625;
+    margin: 0.2em;
+}
+.menu .boxes .idbox .icontext{
+    width: 60%;
+}
+.menu .boxes .idbox .icontext .number{
+    font-size: 24px;
+    font-weight: 600;
+    color: #1D6F42;
+    justify-content: end;
+    display: flex;
+    margin-right: 1em;
+    margin-top: 0.4em;
+}
+.menu .boxes .idbox .icontext .nameun{
+    font-size: 22px;
+    font-weight: 600;
+    color: #163625;
+    margin-left: 1.25em;
+    margin-top: -0.8em;
+}
+.menu .boxes .idbox .icontext .nameun.two{
+    margin-left: 2.6em;
+}
+.menu .boxes .idbox .icontext .nameun.three{
+    margin-left: -0.1em;
+}
+.menu .boxes .idbox .icontext .nameun.four{
+    margin-left: -1.3em;
+}
+.menu .charts{
+    display: flex;
+    height: 80%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.menu .charts .chart{
+    width: 50%;
+    height: 90%;
+    margin: 1em;
+    border-radius: 10px;
+}
 .show{
     display: flex !important;
 }
